# conference-catering-browser

./: .gitignore  README.md
web/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
web/apps/api/: admin.py  apps.py  models.py  pagination.py  select_views.py  serializers.py  tests.py  urls.py
web/apps/common/: admin.py  apps.py  context_processors.py  filters.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
web/apps/common/migrations/: 0001_initial.py  0002_alter_settings_options.py
web/apps/common/templatetags/: check_floor_numeric.py  combined_pagination.py  format_currency.py  included_in_package.py  page_window.py  ptaeo_split.py
web/apps/orders/: admin.py  apps.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
web/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20210418_2245.py  0004_auto_20210419_0103.py  0005_alter_billingrecord_managers.py
web/apps/orders/templates/: input_for_search_bar.html  order_detail.html  order_detail_pdf.html  order_filter_component.html  order_filter_list.html
web/apps/reports/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
web/apps/reports/migrations/: 0001_initial.py  (+2 more)
web/apps/users/: admin.py  apps.py  models.py  tests.py  urls.py
web/config/: settings.py  urls.py
web/static/css/: select2-custom.css
web/templates/components/: buttons_mutate.html  messages.html  pagination.html  sidebar.html  styles_pdf_export.html
web/templates/generic/: generic_form_field.html
web/templates/registration/: login.html
(+12 files in other folders)
